# sgat

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  dijkstra_extend.cc  example.cc  gfa2char_gfa.cc  navarro_extend.cc  navarro_semi.cc  txt2gfa.cc
benchmark/: CMakeLists.txt  sequence_graph_benchmark.cc
include/: dijkstra.h  navarro.h  scoring_schema.h  sequence_batch.h  sequence_graph.h  sga.h  utils.h
src/: CMakeLists.txt  sequence_batch.cc
tests/: CMakeLists.txt  test_graph.cc  test_sequence_io.cc
tests/data/: BRCA1_seq_graph_generated_from_txt.gfa
